--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8.4.38",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwind": "^2.2.12",
     "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
