--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,12 @@
 # next.js
 /.next/
 /out/
+**/.next/
+**/out/
 
 # production
 /build
+**/build
 
 # misc
 .DS_Store
@@ -25,16 +28,21 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+**/npm-debug.log*
+**/yarn-debug.log*
+**/yarn-error.log*
 
 # local env files
 .env*.local
 
 # vercel
 .vercel
+**/.vercel
 
 # typescript
 *.tsbuildinfo
-next-env.d.ts
+**/*.tsbuildinfo
+**/next-env.d.ts
 
 # react
 .env
