--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "loh-backend",
   "version": "1.0.0",
   "description": "The Legion Of Wholeness backend proxy",
@@ -14,6 +15,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.2",
+    "firebase-admin": "^12.2.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.4"
   }
 }
