--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,4 @@
 {
-  "type": "module",
   "name": "loh-backend",
   "version": "1.0.0",
   "description": "The Legion Of Wholeness backend proxy",
@@ -19,6 +18,8 @@
     "firebase-admin": "^12.2.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/node": "^20.14.9",
+    "nodemon": "^3.1.4",
+    "typescript": "^5.5.2"
   }
 }
