Stubbed out contentful

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.6.1",
+    "@contentful/rich-text-plain-text-renderer": "^16.2.1",
     "axios": "^1.7.2",
+    "contentful": "^10.12.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
