Removed unused dependencies

--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
   },
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.6.1",
-    "@contentful/rich-text-plain-text-renderer": "^16.2.1",
     "@contentful/rich-text-react-renderer": "^15.22.1",
-    "axios": "^1.7.2",
     "contentful": "^10.12.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-google-recaptcha": "^3.1.0",
-    "react-markdown": "^9.0.1"
+    "react-google-recaptcha": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
