--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@contentful/rich-text-html-renderer": "^16.6.1",
     "@contentful/rich-text-react-renderer": "^15.22.1",
+    "@emailjs/browser": "^4.3.3",
     "contentful": "^10.12.4",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-google-recaptcha": "^3.1.0"
+    "react-google-recaptcha": "^3.1.0",
+    "react-hook-form": "^7.52.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.13",
