--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@contentful/rich-text-html-renderer": "^16.6.1",
     "@contentful/rich-text-react-renderer": "^15.22.1",
     "@emailjs/browser": "^4.3.3",
+    "aos": "^3.0.0-beta.6",
     "contentful": "^10.12.4",
     "next": "14.2.4",
     "react": "^18",
