--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emailjs/browser": "^4.3.3",
     "aos": "^2.3.4",
     "contentful": "^10.12.4",
+    "hamburger-react": "^2.5.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
