--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@contentful/rich-text-html-renderer": "^16.6.1",
     "@contentful/rich-text-react-renderer": "^15.22.1",
     "@emailjs/browser": "^4.3.3",
+    "@vercel/analytics": "^1.3.1",
     "aos": "^2.3.4",
     "contentful": "^10.12.4",
     "date-fns": "^3.6.0",
