--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "prebuild": "npx tailwindcss -o build.css --minify",
-    "dev": "next build",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
